--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 PORT=4000
 MONGODB_CONNECT_URL=mongodb+srv://leminhduc6402:VzAyJVeVgUoA3ZZi@cluster0.yb3ddch.mongodb.net/mydb
 
-JWT_SECRET=DAYLACHUOIJWTBIMATNHA
-JWT_EXPIRE=6000s
+#SETUP ACCESS TOKEN
+JWT_ACCESS_TOKEN=DAYLACHUOIJWTBIMATNHA
+JWT_ACCESS_EXPIRE=1d
