--- a/.env
+++ b/.env
@@ -2,5 +2,9 @@ PORT=4000
 MONGODB_CONNECT_URL=mongodb+srv://leminhduc6402:VzAyJVeVgUoA3ZZi@cluster0.yb3ddch.mongodb.net/mydb
 
 #SETUP ACCESS TOKEN
-JWT_ACCESS_TOKEN=DAYLACHUOIJWTBIMATNHA
+JWT_SECRET_ACCESS_TOKEN=JWTSECRETACCESSTOKEN
 JWT_ACCESS_EXPIRE=1d
+
+#SETUP REFRESH TOKEN
+JWT_SECRET_REFRESH_TOKEN=JWTSECRETREFRESHTOKEN
+JWT_REFRESH_EXPIRE=1d
