--- a/.env
+++ b/.env
@@ -8,3 +8,12 @@ JWT_ACCESS_EXPIRE=10m
 #SETUP REFRESH TOKEN
 JWT_SECRET_REFRESH_TOKEN=JWTSECRETREFRESHTOKEN
 JWT_REFRESH_EXPIRE=1d
+
+#SAMPLE DATA
+IS_INIT=true
+INIT_PASSWORD=123123
+
+#CONFIG MAIL
+EMAIL_HOST=smtp.gmail.com
+EMAIL_SENDER=leminhduc6402@gmail.com
+EMAIL_PASSWORD=bjdorhdgdvwfolzf
