--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "1.8.1",
     "@nestjs/common": "9.4.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "9.4.0",
@@ -35,11 +36,14 @@
     "class-validator": "0.14.0",
     "cookie-parser": "1.4.6",
     "ejs": "3.1.9",
+    "handlebars": "4.7.7",
     "mongoose": "^7.1.0",
     "ms": "2.1.3",
+    "nodemailer": "6.9.3",
     "passport": "0.6.0",
     "passport-jwt": "4.0.1",
     "passport-local": "1.0.0",
+    "preview-email": "^3.0.19",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.2.0",
     "soft-delete-plugin-mongoose": "^1.0.17"
@@ -55,6 +59,7 @@
     "@types/ms": "^0.7.33",
     "@types/multer": "^1.4.10",
     "@types/node": "18.15.11",
+    "@types/nodemailer": "^6.4.14",
     "@types/passport-jwt": "^3.0.12",
     "@types/passport-local": "^1.0.37",
     "@types/supertest": "2.0.11",
