--- a/package.json
+++ b/package.json
@@ -30,13 +30,17 @@
     "@nestjs/mongoose": "9.2.2",
     "@nestjs/passport": "9.0.3",
     "@nestjs/platform-express": "9.4.0",
+    "@nestjs/schedule": "3.0.1",
+    "@nestjs/throttler": "^5.0.1",
     "api-query-params": "5.4.0",
     "bcryptjs": "2.4.3",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "cookie-parser": "1.4.6",
+    "cron": "2.4.3",
     "ejs": "3.1.9",
     "handlebars": "4.7.7",
+    "helmet": "^7.1.0",
     "mongoose": "^7.1.0",
     "ms": "2.1.3",
     "nodemailer": "6.9.3",
